--- a/soc/Makefile
+++ b/soc/Makefile
@@ -1,9 +1,9 @@
-V_FILE_GEN   = build/ysyxSoCTop.sv
-V_FILE_FINAL = build/ysyxSoCFull.v
+V_FILE_GEN   = build/SoCTop.sv
+V_FILE_FINAL = build/SoCFull.v
 SCALA_FILES = $(shell find src/ -name "*.scala")
 
 $(V_FILE_FINAL): $(SCALA_FILES)
-	mill -i ysyxsoc.runMain ysyx.Elaborate --target-dir $(@D)
+	mill -i soc.runMain soc.Elaborate --target-dir $(@D)
 	mv $(V_FILE_GEN) $@
 	sed -i -e 's/_\(aw\|ar\|w\|r\|b\)_\(\|bits_\)/_\1/g' $@
 	sed -i '/firrtl_black_box_resource_files.f/, $$d' $@
