--- a/sims/vcs/Makefile
+++ b/sims/vcs/Makefile
@@ -13,7 +13,7 @@ TB = $(gowin)/testbench/testbench.v
 
 bb_vsrcs = \
   $(shell find $(soc)/build -name "*.v") \
-  $(shell find $(IP)/myCPU -name "*.v") \
+  $(shell find $(IP)/open-la500 -name "*.v") \
 	$(shell find $(gowin)/gowin_ip/ -name "*.v") \
 
 sim_vsrcs = \
@@ -30,20 +30,26 @@ sim_csrcs ?=
 
 verilog:
 	$(MAKE) -C $(base_dir) verilog
+#--------------------------------------------------------------------
+# Build Software
+#--------------------------------------------------------------------
 
+#生成mi文件，需要用高云eda初始化sram
+mi:
+	$(MAKE) -C $(base_dir)/software mi
 #--------------------------------------------------------------------
 # Build rules
 #--------------------------------------------------------------------
 
 VCS = vcs -full64 -LDFLAGS -Wl,--no-as-needed
 
-VCS_OPTS = -notice -line +lint=all,noVCDE,noONGS,noUI,noNS,noOUDPE -error=PCWM-L -timescale=1ns/1ns -quiet \
+VCS_OPTS = -line +lint=all,noVCDE,noONGS,noUI,noNS,noOUDPE -error=PCWM-L -timescale=1ns/1ns -quiet \
 	+rad +v2k +vcs+lic+wait \
 	+vc+list -CC "-I$(VCS_HOME)/include" \
 	-sverilog +v2k \
 	+incdir+$(soc)/perip/spi/rtl \
 	+incdir+$(soc)/perip/uart16550/rtl \
-	+incdir+$(IP)/myCPU/ \
+	+incdir+$(IP)/open-la500 \
 	+define+CLOCK_PERIOD=2 $(sim_vsrcs) $(sim_csrcs) \
 	+define+RANDOMIZE_MEM_INIT \
 	+define+RANDOMIZE_GARBAGE_ASSIGN \
@@ -60,15 +66,8 @@ $(simv) : $(sim_vsrcs) $(sim_csrcs)
 	cd $(sim_dir) && \
 	rm -rf csrc && \
 	$(VCS) $(VCS_OPTS) -o $(simv) \
-	-debug_acc+pp+f+fn+dmptf -debug_region+cell+encrypt
-	./simv_soc
-
-simv_debug = $(sim_dir)/simv_soc_debug
-$(simv_debug) : $(sim_vsrcs) $(sim_csrcs)
-	cd $(sim_dir) && \
-	rm -rf csrc && \
-	$(VCS) $(VCS_OPTS) -o $(simv_debug) \
-	+define+DEBUG -debug_acc+pp+f+fn+dmptf -debug_region+cell+encrypt \
+	-debug_acc+pp+f+fn+dmptf -debug_region+cell+encrypt > build.log
+	./simv_soc > sim.log
 
 #--------------------------------------------------------------------
 # Run
@@ -76,16 +75,18 @@ $(simv_debug) : $(sim_vsrcs) $(sim_csrcs)
 
 seed = $(shell date +%s)
 exec_simv = $(simv) +permissive -q +ntb_random_seed_automatic +permissive-off
-exec_simv_debug = $(simv_debug) +permissive -q +ntb_random_seed_automatic +permissive-off
 
 
 run: verilog $(simv)
-debug: $(simv_debug)
 
 verdi:
-	verdi $(sim_vsrcs) -ssf $(simv).fsdb &
+	verdi $(sim_vsrcs) -ssf $(simv).fsdb \
+	+incdir+$(soc)/perip/spi/rtl \
+	+incdir+$(soc)/perip/uart16550/rtl \
+	+incdir+$(IP)/open-la500 \
+	&
 
 clean:
 	rm -rf $(output_dir) simv* csrc *.key DVE* *.h *.a *.daidir verdiLog *.conf *.rc *.log
 
-.PHONY: run debug clean verilog
+.PHONY: run clean verilog
