--- a/fpga/gowin/Makefile
+++ b/fpga/gowin/Makefile
@@ -3,13 +3,11 @@ project_dir=system_run/jcs
 
 FS= $(project_dir)/impl/pnr/$(project).fs
 
-openFPGALoader=../../toolchains/openFPGALoader/build/openFPGALoader
+openFPGALoader_dir=../../toolchains/openFPGALoader
+openFPGALoader=$(openFPGALoader_dir)/build/openFPGALoader
 
 detect:
 	sudo $(openFPGALoader) --detect
 
 install:
 	sudo $(openFPGALoader) -b tangmega138k -f $(FS)
-
-all:
-	$(MAKE) -C ../../software all
