--- a/fpga/gowin/Makefile
+++ b/fpga/gowin/Makefile
@@ -1,7 +1,8 @@
-project=jcs
 project_dir=system_run/jcs
 
-FS= $(project_dir)/impl/pnr/$(project).fs
+FS= $(project_dir)/impl/pnr/jcs.fs
+BIN= /home/cyh/chiplab/software/am-kernels/tests/soc-tests/build/ddr_test-loongarch32r-soc.bin 
+## FS= $(project_dir)/impl/pnr/ao_0.fs
 
 openFPGALoader_dir=../../toolchains/openFPGALoader
 openFPGALoader=$(openFPGALoader_dir)/build/openFPGALoader
@@ -11,3 +12,6 @@ detect:
 
 install:
 	sudo $(openFPGALoader) -b tangmega138k -f $(FS)
+
+program:
+	sudo $(openFPGALoader) -b tangmega138k --external-flash $(BIN) $(FS)
