--- a/sims/vcs/Makefile
+++ b/sims/vcs/Makefile
@@ -50,7 +50,7 @@ deltmp:
 
 VCS = vcs -full64 -LDFLAGS -Wl,--no-as-needed
 
-VCS_OPTS = -line +lint=all,noVCDE,noONGS,noUI,noNS,noOUDPE -error=PCWM-L -timescale=1ps/1ps -quiet \
+VCS_OPTS = -line +lint=all -timescale=1ps/1ps -quiet \
 	+rad +v2k +vcs+lic+wait \
 	+vc+list -CC "-I$(VCS_HOME)/include" \
 	-sverilog +v2k \
