--- a/fpga/gowin/system_run/jcs/impl/pnr/device.cfg
+++ b/fpga/gowin/system_run/jcs/impl/pnr/device.cfg
@@ -1,10 +1,10 @@
 set JTAG regular_io = false
-set SSPI regular_io = false
-set MSPI regular_io = false
+set SSPI regular_io = true
+set MSPI regular_io = true
 set READY regular_io = false
 set DONE regular_io = false
 set I2C regular_io = false
-set CPU regular_io = false
+set CPU regular_io = true
 set CRC_check = true
 set compress = false
 set encryption = false
